TODO
* thread pool
  - fix winapi version
  - add winapi TP_POOL implemenation
* condition
  - add more tests
* have local library be dependent on HAVE_MULTI_THREAD_SUPPORT
* add macros for locking ? or have fallback dummy locks ?
* add try grab function
  - lock ?
  - read/write
* reimplement repeating thread as a queued thread?
* update man pages
* add glib support

20130509
* worked on thread pool

20130508
* worked on queue
* worked on thread pool

20130507
* worked on condition
* worked on queue
* reintroduced lock, need to distinguish between critical section
  and mutex on WINAPI for condition
* removed INSTALL from git version
* updated msvscpp files
* moved repeating thread into thread pool

20130506
* worked on condition
* worked on repeating thread
* removed lock in favor of mutex
* worked on queue

20130505
* worked on thread
* worked on thread attributes
* worked on thread pool
* worked on mutex
* worked on repeating thread

20130503
* Initial version based rename of libcmulti
* Worked on stand-alone version
* Worked on read/write lock
